--- a/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/CheckList.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/CheckList.cshtml
@@ -100,7 +100,8 @@
                 ['CheckColorShade', 'Color Shade',@Model.CheckColorShade],
                 ['CheckHandfeel', 'Handfeel', @Model.CheckHandfeel],
                 ['CheckAppearance', 'Appearance',@Model.CheckAppearance],
-                ['CheckPrintEmbDecorations', 'Print/Emb Decorations',@Model.CheckPrintEmbDecorations],
+                ['CheckPrintEmbDecorations', 'Printing/AOP',@Model.CheckPrintEmbDecorations],
+                ['CheckEMB', 'EMB',@Model.CheckEMB],
                 ['CheckHT', 'HT', @Model.CheckHT]
             ]
         ]);
