--- a/Quality/Quality/Views/SendMailAttachfiles/SendMailer.cshtml
+++ b/Quality/Quality/Views/SendMailAttachfiles/SendMailer.cshtml
@@ -62,7 +62,8 @@
                 CC:
             </td>
             <td>
-                @Html.TextBoxFor(m => m.CC, new { @style = "width:100%;" })
+                @Html.TextBoxFor(m => m.CC, new { @style = "width:87%;" })
+                <input type="button" id="btnGroup" name="name" style="width:12%;" value="Group" />
             </td>
         </tr>
         <tr>
@@ -111,5 +112,32 @@
         $('.sendMailExit').on('click', function () {
             window.close();
         });
+
+        $("#btnGroup").click(function () {
+            FailMail();
+        });
     });
+
+    function FailMail() {
+        var para = "?Title=Group&Type=BulkFGT&ExitReload=False";
+
+        window.open('@Url.Action("TestFailMailList", "PublicWondow",new { Area=""})' + para, 'Mail List', config = 'toolbar=no,status=no,location=no,width=650,height=750');
+    }
+
+    function GetTestFailMailList(data) {
+        var to = "";
+        var cc = "";
+        $.each(data, function (index, value) {
+            if (value.To != '') {
+                to += value.To + ';';
+            }
+            if (value.CC != '') {
+                cc += value.CC + ';';
+            }
+        });
+
+        if (to != "") {
+            $("#CC").val(cc);
+        }
+    }
 </script>
