ISP20221294 - Final Inspection Detail 依需求修改。

--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
@@ -73,8 +73,7 @@
             color: #000;
             border: 1px #BCBCBC solid;
             height: 50vh;
-            overflow: scroll;
-            overflow-x: hidden;
+            overflow: auto;
         }
 
         #Detail_Cartons_info {
