ISP20221401 - 1. 工廠Quality，外層Save、內層Encode都加上SP#不得為空的檢查

--- a/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Index.cshtml
@@ -811,7 +811,7 @@
                 async: false,
                 success: function (data) {
                     if (data.length == 0) {
-                        $(this).val('');
+                        $(`#garmentTest_Details_${idx}__OrderID`).val('');
                         msg.WithError("SP not Found");
                     }
                     else {
