ISP20221382 - FinalInspection - Query功能調整

--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Index.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Index.cshtml
@@ -276,7 +276,7 @@
         if ($("#SP").val() == "" && $("#CustPONO").val() == "" && $("#StyleID").val() == "" && $("#AuditDateStart").val() == "" && $("#AuditDateEnd").val() == ""
             && $("#SubmitDateStart").val() == "" && $("#SubmitDateEnd").val() == "") {
 
-            msg.WithError('SP# ,PO# ,Style# , Audit Date, Submit Date can not br empty.');
+            msg.WithError('SP# ,PO# ,Style# , Audit Date, Submit Date can not be empty.');
             return false;
         }
         else {
