--- a/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/CheckList.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/CheckList.cshtml
@@ -102,7 +102,8 @@
                 ['CheckAppearance', 'Appearance',@Model.CheckAppearance],
                 ['CheckPrintEmbDecorations', 'Printing/AOP',@Model.CheckPrintEmbDecorations],
                 ['CheckEMB', 'EMB',@Model.CheckEMB],
-                ['CheckHT', 'HT', @Model.CheckHT]
+                ['CheckHT', 'HT', @Model.CheckHT],
+                ['CheckBadge', 'Badge', @Model.CheckBadge]
             ]
         ]);
         adata.push([null, 'Label', false,
